--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="container">
           <div class="row">
             <h2 class="section__title">
-              Featured <span class="purple">Books</span>
+              Latest <span class="purple">Books</span>
             </h2>
             <div class="books">
               <div class="book">
@@ -315,6 +315,15 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section id="explore">
+            <div class="container">
+                <div class="row row__column">
+                <h2 class="section__title">Explore more <span class="purple">Books</span></h2>
+                <button class="btn">Browse Books</button>
+                </div>
+            </div>
       </section>
     </main>
   </body>
